# FlappyHeight

./: CMakeLists.txt  Flappy_Height_README.txt  INSTALL_CONFIG.txt  README.md  main.cpp
Entities/: AbstractEntity.cpp  Character.cpp  Game.cpp  Logs.cpp  MenuScreen.cpp  OptionScreen.cpp  Pipes.cpp  PlayerCaracter.cpp  Results.cpp  ScoreScreen.cpp  Star.cpp  TimeManager.cpp
Interfaces/: IObservable.hh  IObserver.hh
LOGS/: Error_logs.txt  logs.txt
headers/: AbstractEntity.hh  Character.hh  Game.hh  Logs.hh  MenuScreen.hh  OptionScreen.hh  Pipes.hh  PlayerCaracter.hh  Results.hh  ScoreScreen.hh  Star.hh  TimeManager.hh
